--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^4.6",
+        "phpoffice/phpspreadsheet": "^5.1",
         "santigarcor/laratrust": "^8.3",
         "spatie/laravel-permission": "^6.21"
     },
